--- a/src/pages/fileExplorer/fileExplorer.css
+++ b/src/pages/fileExplorer/fileExplorer.css
@@ -18,6 +18,7 @@
   background-color: white;
   border: 1px solid #ccc;
   z-index: 1000;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .context-menu div {
